[gd_scene load_steps=8 format=3 uid="uid://dq5kvj6bthytt"]

[ext_resource type="Script" path="res://Minigames/Chosoku/chosoku.gd" id="1_xsyd0"]
[ext_resource type="Texture2D" uid="uid://bp6adqdyvxwab" path="res://Art/Chosoku/meditating_person.png" id="2_4e5w1"]
[ext_resource type="Texture2D" uid="uid://dllxy7mkcd5al" path="res://Art/Chosoku/circle-outline.png" id="3_edbef"]
[ext_resource type="Script" path="res://Minigames/Chosoku/CircleFollow.gd" id="4_3k0xx"]

[sub_resource type="Gradient" id="Gradient_8ndmk"]
colors = PackedColorArray(0.52549, 0.4, 0.254902, 1, 0.66221, 0.417556, 0.443409, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5cbvs"]
gradient = SubResource("Gradient_8ndmk")
width = 574
height = 964
fill_from = Vector2(0.54546, 1)
fill_to = Vector2(0.523929, 0.200855)

[sub_resource type="CircleShape2D" id="CircleShape2D_andtb"]
radius = 232.138

[node name="Chosoku" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 59.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_xsyd0")
circleInterpolationSpeedMult = 0.05

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_5cbvs")

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 685.0
offset_right = 442.93
offset_bottom = 742.365
mouse_filter = 1
show_percentage = false

[node name="Person" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -20.0
offset_top = 254.0
offset_right = 592.0
offset_bottom = 725.0
texture = ExtResource("2_4e5w1")

[node name="CircleSpots" type="Node2D" parent="Person"]
position = Vector2(20, -254)

[node name="Node2D" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(291, 337)

[node name="Node2D2" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(290, 370)

[node name="Node2D3" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(291, 416)

[node name="Node2D4" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(292, 462)

[node name="Node2D5" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(292, 505)

[node name="Node2D6" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(292, 554)

[node name="Node2D7" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(232, 573)

[node name="Node2D8" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(156, 598)

[node name="Node2D9" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(225, 619)

[node name="Node2D10" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(335, 580)

[node name="Node2D11" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(414, 590)

[node name="Node2D12" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(341, 621)

[node name="Node2D13" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(289, 628)

[node name="Node2D14" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(237, 448)

[node name="Node2D15" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(340, 449)

[node name="Node2D16" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(365, 479)

[node name="Node2D17" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(389, 516)

[node name="Node2D18" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(434, 529)

[node name="Node2D19" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(480, 530)

[node name="Node2D20" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(210, 477)

[node name="Node2D21" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(194, 519)

[node name="Node2D22" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(149, 525)

[node name="Node2D23" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(94, 529)

[node name="Node2D24" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(243, 501)

[node name="Node2D25" type="Node2D" parent="Person/CircleSpots"]
position = Vector2(329, 501)

[node name="CircleFollow" type="Control" parent="."]
anchors_preset = 0
offset_left = 294.0
offset_top = 289.0
offset_right = 394.0
offset_bottom = 389.0
mouse_filter = 1
script = ExtResource("4_3k0xx")

[node name="TextureRect" type="TextureRect" parent="CircleFollow"]
layout_mode = 0
offset_left = -32.0
offset_top = -31.0
offset_right = 480.0
offset_bottom = 481.0
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_edbef")

[node name="Area2D" type="Area2D" parent="CircleFollow/TextureRect"]
position = Vector2(256, 248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CircleFollow/TextureRect/Area2D"]
shape = SubResource("CircleShape2D_andtb")

[node name="CircleRepositionTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="input_event" from="CircleFollow/TextureRect/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_exited" from="CircleFollow/TextureRect/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="CircleRepositionTimer" to="." method="_on_circle_reposition_timer_timeout"]
